stop stretching the images when the screen gets narrower

--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -73,13 +73,22 @@ body {
     line-height: var(--line-height-base);
 }
 
-.project-image {
-    width: 100%;
+.project-image-wrapper {
     aspect-ratio: 1 / 1;
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+}
+
+.project-image {
+    position: absolute;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
+    left: 0;
+    top: 0;
     display: block;
     max-width: 100%;
-    height: auto;
 }
 
 /* Button*/
